Fixed bug in nftables

--- a/src/host/nftables/nftables.conf
+++ b/src/host/nftables/nftables.conf
@@ -27,12 +27,12 @@ table inet filter {
     # Packets to be forwarded
     chain forward {
         # Drop by default
-        type filter hook input priority filter; policy drop;
+        type filter hook forward priority filter; policy drop;
     }
 
     # Outgoing packets
     chain output {
         # Allow by default
-        type filter hook input priority filter; policy accept;
+        type filter hook output priority filter; policy accept;
     }
 }
